Fixing links so they work on project pages
See 'Project Page URL Structure' section of
http://jekyllrb.com/docs/github-pages/.

That documentation stems from this comment
https://github.com/mojombo/jekyll/issues/332#issuecomment-18952908 on
Jekyll issue #332.

Basically, we set baseurl in _config.yml to the project name, and use
{{ site.baseurl }} throughout the site (with or without a trailing /,
depending on if we're followed by {{ page.url }} or '/css', '/js', etc
(detailed description in docs linked above).  When running locally, use
`jekyll serve --watch --baseurl '' `

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: "Strongly Typed"
 description: "A responsive HTML5 site template. Manufactured by HTML5 UP. Jekylled by @techieshark."
 pygments: true
-baseurl: "http://techieshark.github.io/strongly-typed-jekylled"
+baseurl: "/strongly-typed-jekylled"
 #excerpt_separator: "<!--more-->"
 
 owner: "Your Name"
